start on fair harmonization

--- a/environment.yml
+++ b/environment.yml
@@ -14,5 +14,9 @@ dependencies:
   - pooch
   - python-dotenv
   - scipy
+  - scmdata
   - tqdm
   - xarray
+  - pip
+  - pip:
+    - aneris-iamc[units]
